<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">Wits Daily</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="title_activity_home_screen">Home Screen</string>
    <string name="personid">Person Number</string>
    <string name="title_activity_course_forum">Course Forum</string>
    <string name="view_unregistered_courses">View unregistered courses</string>
    <string name="timetable">Timetable</string>
    <string name="logout">Logout</string>
    <string name="course_name">Course Name</string>
    <string name="create_course">Create Course</string>
    <string name="course_description">Course Description</string>
    <string name="course_code">Course Code</string>
    <string name="link_course">Link Course</string>
    <string name="create_post">Create Post</string>
    <string name="post_title">Post Title</string>
    <string name="post_body">Post Body</string>
    <string name="add_session">Add Session</string>
    <string name="announcement_title">Announcement Title</string>
    <string name="announcement_body">Announcement Body</string>
    <string name="create_announcement">Create Announcement</string>
    <string name="send">Send</string>
    <string name="type_message">Type a message</string>
    <string name="make_announcement">Make Announcement</string>
    <string name="course_chat">Course Chat</string>
    <string name="create_survey">Create Survey</string>
    <string name="forum">Forum</string>
    <string name="edit_sessions">Edit Sessions</string>
    <string name="edit_course">Edit Course</string>
    <string name="new_course_password">New Course Password</string>
    <string name="update_course">Update Course</string>
    <string name="update_session">Update Session</string>
    <string name="comment">Comment</string>
    <string name="cancel">Cancel</string>
    <string name="comment_content">Comment contents</string>
    <string name="type_question">Type a question...</string>
    <string name="post">Post</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_lecture_course_forum">Lecture Course Forum</string>
    <string name="title_activity_test">test</string>

    <string name="title_activity_timetable">Timetable</string>
    <string name="title_activity_view_session">View Session</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_venue_list">Venue List</string>
    <string name="error_pNumb_not_set_addTutors">Please type the person number whose permissions you would like to change</string>
    <string name="submit_answer">Submit Answer</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="enter_numerical_value">Enter Numeric Value</string>
    <string name="enter_text">Enter Text</string>
    <string name="disable_notifications">Disable Notifications</string>
    <string name="survey_title">Survey Title</string>
    <string name="survey_type">Survey Type:</string>
    <string name="options">Options</string>
    <string name="insert_option">Insert Option</string>
    <string name="add_option">Add Option</string>
    <string name="remove_selected">Remove Selected</string>
    <string name="send_survey">Send Survey</string>
    <string name="end_get_results">End/Get Results</string>
    <string name="okay">Okay</string>
    <string name="view_on_map">View On Map</string>
    <string name="venue_code">Venue Code</string>
    <string name="venue_code_here">Type venue code here</string>
    <string name="enroll">Enroll</string>
    <string name="enrollment_key">Enrolement Key (If required)</string>
    <string name="remove_cancellations">Remove Cancellations</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="cancellations">Cancellations</string>
    <string name="cancellation_date">Cancellation Date</string>
    <string name="add_a_cancelation">Add a cancellation</string>
    <string name="duration_in_minutes">Duration in minutes</string>
    <string name="type">Type:</string>
    <string name="time">Time:</string>
    <string name="date">Date:</string>
    <string name="next_occurrence">Next occurrence</string>
    <string name="repeat_frequency">Repeat Frequency</string>
    <string name="repeat_type">Repeat Type</string>
    <string name="room">Room</string>
    <string name="building">Building</string>
    <string name="venue">Venue:</string>
    <string name="final_occurrence">Final Occurrence</string>
    <string name="number_of_sessions">Number of sessions</string>
    <string name="break_between_sessions">Break between sessions</string>
    <string name="title_activity_add_booking">addBooking</string>
    <string name="add_tutors_or_lecturers">Add Tutors or Lecturers</string>
    <string name="edit_bookings">Edit Bookings</string>
    <string name="title_activity_view_bookable_sessions">viewBookableSessions</string>
    <string name="add_bookable">add bookable session</string>
    <string name="update_bookable_sessions">update bookable sessions</string>
    <string name="title_activity_make_booking">makeBooking</string>
    <string name="make_booking">Make Booking</string>
    <string name="book_a_consult_or_meeting">Book a consult or meeting</string>
    <string name="choose_a_day_to_book">Choose a day to book</string>
    <string name="choose_a_slot_to_book">Choose a slot to book</string>
    <string name="first_occurance">First Occurance</string>
    <string name="make_bookings">Make bookings</string>
    <string name="sync_calendar">sync Calendar</string>
    <string name="selectBuild">Building:</string>
    <string name="floor">Floor:</string>
    <string name="selectRoom">Room:</string>
    <string name="vens">venue</string>
    <string name="viewimage">ViewImage</string>
    <string name="view_image">view image</string>
</resources>
