<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Forum.ForumAddPost">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvForumCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:textStyle="bold"
            android:text="TextView" />

        <EditText
            android:id="@+id/edtTitle"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/post_title"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edtBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/post_body"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorWhite"
            android:onClick="clickCreatePost"
            android:background="@drawable/rounded_button"
            android:text="@string/create_post" />
    </LinearLayout>
</ScrollView>