<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".CourseRegistration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/edtCourseCode"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/new_course_password"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounder_corner"
            android:paddingLeft="10dp"
            android:maxLength="8"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edtCourseName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/course_name"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounder_corner"
            android:paddingLeft="10dp"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edtCourseDescription"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounder_corner"
            android:ems="10"
            android:hint="@string/course_description"
            android:inputType="textMultiLine"
            android:maxHeight="140dp"
            android:paddingLeft="10dp"
            android:scrollbars="vertical" />

        <Button
            android:id="@+id/btnCreateCourse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:onClick="updateCourse"
            android:text="@string/update_course"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/tvState"
            android:layout_width="match_parent"
            android:textSize="17sp"
            android:layout_marginTop="5dp"
            android:layout_height="25dp"
            android:visibility="invisible"
            android:text="State" />
    </LinearLayout>

</ScrollView>