<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Survey.SurveyAnswer">
    <TextView
        android:id="@+id/tvCourseCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="CourseCode" />

    <TextView
        android:id="@+id/tvSurveyTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/edtTextValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_text"
        android:inputType="textPersonName"
        android:visibility="gone" />

    <EditText
        android:id="@+id/edtNumerical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_numerical_value"
        android:inputType="numberDecimal"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/llOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/rgSurveyOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </RadioGroup>
        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button"
        android:onClick="clickSubmit"
        android:text="@string/submit_answer" />
</LinearLayout>
